# mlp-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
demo/: sum_test.csv  sum_train.csv
include/: mlp.h
include/mlp/: activations.h  linalg.h  random.h  smalloc.h
lib/: activations.c  linalg.c  mlp.c  random.c  smalloc.c
src/: csv.c  csv.h  main.c  trim.c  trim.h
